@@ -18,7 +18,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-# $Id: _HasAttribute.py 6529 2006-05-03 06:29:07Z rshura $
+# $Id$
 
 #-------------------------------------------------------------------------
 #
@@ -32,27 +32,26 @@ from gettext import gettext as _
 # GRAMPS modules
 #
 #-------------------------------------------------------------------------
-from RelLib import FamilyRelType
+from RelLib import EventType
 from Filters.Rules._Rule import Rule
 
 #-------------------------------------------------------------------------
 #
-# HasAttribute
+# HasType
 #
 #-------------------------------------------------------------------------
-class HasRelType(Rule):
-    """Rule that checks for a person with a particular personal attribute"""
+class HasType(Rule):
+    """Rule that checks for an event of a particular type"""
 
-    labels      = [ _('Relationship type:') ]
-    name        = _('Family with the relationship type')
-    description = _("Matches family with the relationship type "
-                    "of a particular value")
+    labels      = [ _('Event type:') ]
+    name        = _('Event with the particular type')
+    description = _("Matches event with the particular type ")
     category    = _('General filters')
 
-    def apply(self, db, family):
+    def apply(self, db, event):
         if not self.list[0]:
             return False
         else:
-            specified_type = FamilyRelType()
+            specified_type = EventType()
             specified_type.set_from_xml_str(self.list[0])
-            return family.get_relationship() == specified_type
+            return event.get_type() == specified_type
